<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsHeaderText"
        android:textSize="24sp"
        android:padding="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/WordLengthSettingText"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/wordLengthTextView"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"/>

    </LinearLayout>

    <SeekBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/wordLengthSlider"
        android:paddingBottom="30dp"
        android:max="20"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guessesSettingsText"
        android:id="@+id/guessesTextView"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/guessesValTextView"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"/>

</LinearLayout>

    <SeekBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/guessesSlider"
        android:paddingBottom="30dp"
        android:max="26"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evilGameSwitchSettings"
        android:textSize="18sp"
        android:id="@+id/evilModeSwitch"
        android:layout_gravity="center_horizontal"
        android:switchPadding="110dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveButtonSettings"
        android:id="@+id/SaveButton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:onClick="SaveButtonOnClick"/>

</LinearLayout>
